--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   </div>
 
   <script>
-    let tabs = [{ id: 'tab1', label: 'Tab 1', code: '-- Start coding in Tab 1' }];
+    let tabs = [{ id: 'tab1', label: 'Tab 1', code: '-- Welcome to Vernity' }];
     let activeTabId = 'tab1';
     let editor;
 
@@ -306,3 +306,4 @@
   </script>
 </body>
 </html>
+
